# SDACTS

AndroidJava/app/: build.gradle.kts
C#/: Program.cs  SampleCRUD.csproj
C#/Controllers/: AccountController.cs  ProductsController.cs  UsersController.cs
C#/Data/: AppDbContext.cs
C#/Models/: LoginViewModel.cs  Product.cs  User.cs
C#/Views/: _ViewImports.cshtml
F#/: F#.fsproj  F#.slnx
Scala/: build.sbt
cgi-bin/: add.pl  db.pl  delete.pl  edit.pl  logout.cgi  product.cgi  product_system.pl  register.cgi  search.pl
dbqrs/: SampleDb.txt
go/: go.mod  go.sum  main.go  setup-table-only.sql
go/static/: index.html
go_PRODUCT_SYSTEM/: go.mod  go.sum
go_PRODUCT_SYSTEM/static/: index.html  login.html  script.js  style.css
java/: dependency-reduced-pom.xml  pom.xml  run.bat  run.txt
js/: index.html  package-lock.json  package.json  server.js
js/public/: login.html  main.html  script.js
julia/: index.html  product_system.jl  register.html  script.js  style.css  test_connection.jl  web_server.jl
perl/: index.html  style.css
perl/cgi-bin/: add.pl  db.pl  delete.pl  edit.pl  login.cgi  logout.cgi  product.cgi  product_system.pl  register.cgi  search.pl
php/htdocs/: authenticate.php  config.php  login.php  main.php  process.php  test.php
product-system/: index.html  login.html  register.html  style.css
python/: app.py  config.py  requirements.txt  run.txt
ruby/: Gemfile  app.rb
rust/: .env  Cargo.toml  config.example.json  setup_database.sql
rust/src/: app.rs  auth.rs  database.rs  db.rs  db_config.rs  main.rs  models.rs  products.rs
(+69 files in other folders)
